DONE: Add friendship, documentation, rejected installment, add installments to certain friend, validate friends and status
