# src/models/FriendRequestEntity.ts
@@ -1,0 +1,37 @@
+import { Entity, PrimaryGeneratedColumn, Column, ManyToOne, JoinColumn, CreateDateColumn, UpdateDateColumn } from "typeorm";
+import { User } from "./UserEntity.js";
+
+export enum FriendRequestStatus {
+    PENDING = 'PENDING',
+    ACCEPTED = 'ACCEPTED',
+    REJECTED = 'REJECTED'
+}
+
+@Entity({ name: 'FRIENDREQUEST' })
+export class FriendRequestEntity {
+    @PrimaryGeneratedColumn()
+    id: number;
+
+    @Column({ type: 'int', nullable: false })
+    senderId: number;
+
+    @Column({ type: 'int', nullable: false })
+    receiverId: number;
+
+    @Column({ type: 'enum', enum: FriendRequestStatus, default: FriendRequestStatus.PENDING })
+    status: FriendRequestStatus;
+
+    @ManyToOne(() => User, { onDelete: 'CASCADE' })
+    @JoinColumn({ name: 'senderId' })
+    sender: User;
+
+    @ManyToOne(() => User, { onDelete: 'CASCADE' })
+    @JoinColumn({ name: 'receiverId' })
+    receiver: User;
+
+    @CreateDateColumn({ type: 'timestamp' })
+    createdAt: Date;
+
+    @UpdateDateColumn({ type: 'timestamp' })
+    updatedAt: Date;
+}
