# src/models/FriendshipEntity.ts
@@ -1,0 +1,25 @@
+import { Entity, PrimaryGeneratedColumn, Column, ManyToOne, JoinColumn, CreateDateColumn } from "typeorm";
+import { User } from "./UserEntity.js";
+
+@Entity({ name: 'FRIENDSHIP' })
+export class FriendshipEntity {
+    @PrimaryGeneratedColumn()
+    id: number;
+
+    @Column({ type: 'int', nullable: false })
+    userId: number;
+
+    @Column({ type: 'int', nullable: false })
+    friendId: number;
+
+    @ManyToOne(() => User, { onDelete: 'CASCADE' })
+    @JoinColumn({ name: 'userId' })
+    user: User;
+
+    @ManyToOne(() => User, { onDelete: 'CASCADE' })
+    @JoinColumn({ name: 'friendId' })
+    friend: User;
+
+    @CreateDateColumn({ type: 'timestamp' })
+    createdAt: Date;
+}
